# semantic-navigator

./: .gitignore  README.md  facets.py  pyproject.toml
semantic_navigator/: cache.py  gpu.py  inference.py  main.py  models.py  pipeline.py  util.py
tests/: test_integration.py  test_main.py
