[project]
name = "semantic-navigator"
version = "1.0.0"
description = "A semantic project navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "dulwich",
    "fastembed",
    "pydantic",
    "scikit-learn",
    "textual",
    "tqdm",
]

[project.optional-dependencies]
gpu = ["onnxruntime-directml"]
local = ["llama-cpp-python"]
openai = ["openai", "tiktoken"]

[project.scripts]
semantic-navigator = "semantic_navigator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["semantic_navigator"]
